--- a/node-apollo-server/package.json
+++ b/node-apollo-server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node index.ts"
+    "start": "ts-node index.ts",
+    "start:prod":"NODE_ENV=production pm2 start build/index.js -i max"
   },
   "type": "module",
   "keywords": [],
